--- a/index.html
+++ b/index.html
@@ -13,7 +13,12 @@
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
 
     </head>
+
+    
     <body>
+
+
+
 
 
 <div class="container">
@@ -62,6 +67,9 @@
         </div>
     </div>
 
+
+
+
     <!-- <div class="row justify-content-center m-2 p-2">
         <div class="card" id="time-container"> 
         </div>
@@ -72,7 +80,7 @@
 
 </div>
         <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script> -->
-        <script src="http://code.jquery.com/jquery-latest.js"></script>
+        <script src="https://code.jquery.com/jquery-latest.js"></script>
         <script src="topbar.js"></script>
         <script src="script.js"></script>
 
