--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     <div id="savebuttoncontainer">
    </div>
     </div>
-    <div class="col-md-2 mt-4">
+    <div class="col-md-2 okSubmitButtons">
 
         <button id="previousQuestion" class="btn" onclick="previousQuestion()"><i class="fa-solid fa-angle-up"></i></button>
         <button id="nextQuestion" class="btn" onclick="nextQuestion()"><i class="fa-solid fa-angle-down"></i></button>
